connected js file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jon's Personal Webpage</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="media/fontawesome/css/all.css" rel="stylesheet"> <!--load all fontawesome styles --></head>
+    <link href="media/fontawesome/css/all.css" rel="stylesheet"> <!--load all fontawesome styles -->
+	<script src="main.js"></script>
+	</head>
 <body>
     <div class="navbar">
         <h1>Jons Personal Website</h1>
