--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jon's Personal Webpage</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="media/fontawesome/css/all.css" rel="stylesheet"> <!--load all fontawesome styles -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<script src="main.js"></script>
 	</head>
 <body>
